config/k8s/develop/_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: toy-develop

# vim: ts=2 sw=2 et sts=2 ft=yaml
