config/k8s/develop/manticore.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manticore
  namespace: toy-develop
  labels:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: manticore
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: toy
      app.kubernetes.io/instance: develop
      app.kubernetes.io/component: manticore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: toy
        app.kubernetes.io/instance: develop
        app.kubernetes.io/component: manticore
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: manticore
        image: registry.gitlab.tiger-computing.co.uk/clients/geograph/geograph_toy/manticore:develop
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/lib/manticore
          name: data
        - mountPath: /var/run/manticore
          name: run
        ports:
        - containerPort: 9306
          name: sphinxql
        - containerPort: 9312
          name: sphinxapi
      securityContext:
        fsGroup: 999  # manticore inside the container
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: manticore-data
      - name: run
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: manticore
  namespace: toy-develop
  labels:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: manticore
spec:
  ports:
  - name: sphinxql
    port: 9306
    protocol: TCP
    targetPort: sphinxql
  - name: sphinxapi
    port: 9312
    protocol: TCP
    targetPort: sphinxapi
  selector:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: manticore

# vim: ts=2 sw=2 et sts=2 ft=yaml
