config/k8s/develop/memgator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memgator
  namespace: toy-develop
  labels:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: memgator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: toy
      app.kubernetes.io/instance: develop
      app.kubernetes.io/component: memgator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: toy
        app.kubernetes.io/instance: develop
        app.kubernetes.io/component: memgator
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: memgator
        image: registry.gitlab.tiger-computing.co.uk/clients/geograph/geograph_toy/memgator:develop
        imagePullPolicy: Always
        command: [
          "memgator",
          "-a", "/run/config/archives.json",
          "-A", "Mozilla/5.0 (Geograph LinkCheck Bot +http://www.geograph.org.uk/help/bot)",
          "server"
        ]
        ports:
        - containerPort: 1208
          name: http
        volumeMounts:
        - mountPath: /run/config
          name: config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: memgator
---
apiVersion: v1
kind: Service
metadata:
  name: memgator
  namespace: toy-develop
  labels:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: memgator
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: memgator

# vim: ts=2 sw=2 et sts=2 ft=yaml
