config/k8s/develop/carrot2-dcs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrot2-dcs
  namespace: toy-develop
  labels:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: carrot2-dcs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: toy
      app.kubernetes.io/instance: develop
      app.kubernetes.io/component: carrot2-dcs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: toy
        app.kubernetes.io/instance: develop
        app.kubernetes.io/component: carrot2-dcs
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: carrot2-dcs
        image: registry.gitlab.tiger-computing.co.uk/clients/geograph/geograph_toy/carrot2-dcs:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: carrot2-dcs
  namespace: toy-develop
  labels:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: carrot2-dcs
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: carrot2-dcs
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: carrot2-dcs
  namespace: toy-develop
  labels:
    app.kubernetes.io/name: toy
    app.kubernetes.io/instance: develop
    app.kubernetes.io/component: carrot2-dcs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: carrot2-dcs-dev.cloud.geograph.org.uk
    http:
      paths:
      - backend:
          serviceName: carrot2-dcs
          servicePort: http
  tls:
  - hosts:
    - carrot2-dcs-dev.cloud.geograph.org.uk
    secretName: carrot2-dcs-tls

# vim: ts=2 sw=2 et sts=2 ft=yaml
